--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -49,6 +49,7 @@
     {{- if (and .Site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
     {{- partial "share_icons.html" . -}}
     {{- end }}
+    {{ template "_internal/disqus.html" . }}
   </footer>
 
   {{- if (.Param "comments") }}
